<resources>
    <string name="app_name">Explore Shanghai</string>
    <string name="shanghai">Shanghai</string>
    <string name="shanghai_chinese">上海</string>
    <string name="find_attractions">Find Attractions Around You</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="description">Description:</string>
    <string name="review">REVIEW</string>
    <string name="info">INFO</string>
    <string name="home">Home</string>

    <!-- Restaurant -->
    <string name="category_attractions">Attractions</string>
    <string name="category_food">Food</string>
    <string name="category_play">Play</string>


    <!-- String for Attractions -->
    <!-- The Bund -->
    <string name="bund_title">The Bund</string>
    <string name="bund_subtitle"># Historic Walking Area</string>
    <string name="bund_review">A must-do. I’ve been to Shanghai many times and never saw it and
        it made me have a new perspective on the city. I saw during the day, but assume night
        time would have a whole different feel. Enjoy!</string>
    <string name="bund_reviewer">—-  FrankieLankie</string>
    <string name="bund_address">Zhongshan East 1st Rd, WaiTan, \nShanghai, China</string>
    <string name="bund_desc">This is a designated section of Shanghai’s port along the
        Huang Pu River lined with beautiful neo-classical buildings and a waterfront promenade
        that is packed with tourists, locals and street sellers.</string>
    <string name="bund_length">Recommended length of visit: 2–3 hours</string>
    <string name="bund_fee">Fee: No</string>


    <!-- Shanghai Museum -->
    <string name="museum_title">Shanghai Museum</string>
    <string name="museum_subtitle"># Specialty Museum</string>
    <string name="museum_review">If you visit this museum, you get a comprehensive picture of the
        traditional Chinese art. Several art branches are presented (paintings, calligraphy, etc.).
        So if you are interested at least a little by the local culture and are, you definitely
        must not skip this. And the entry is free. :-)</string>
    <string name="museum_reviewer">—-  mittomen</string>
    <string
        name="museum_address">201 Renmin Ave, RenMin GuangChang, \nHuangpu Qu, China, 200000</string>
    <string name="museum_desc">This elegant museum, opened in 1996, features eleven
	state-of-the-art galleries housing China’s international-standard exhibits of bronzes, paintings, 
	sculpture, ceramics, jade and Ming and Qing dynasty furniture.</string>
    <string name="museum_length">Recommended length of visit: 2–3 hours</string>
    <string name="museum_fee">Fee: No</string>

    <!-- Shanghai Wild Animal Park -->
    <string name="zoo_title">Shanghai Wild Animal Park</string>
    <string name="zoo_subtitle"># Nature &amp; Wildlife Areas</string>
    <string name="zoo_review">I’ve been to a free zoos in China now and this is the best in terms of animal welfare
	that I witnessed. Huge area, wide spaces. There are opportunities to feed and hold animals I’m not sure how ethical 
	that is but they seemed well looked after.</string>
    <string name="zoo_reviewer">—-  Hodderr</string>
    <string
        name="zoo_address">No.178 Nanliu Main Road, Pudong New Area, \nShanghai 201300, China </string>
    <string name="zoo_desc">Web Site: http://www.shwzoo.com/</string>
    <string name="zoo_length">Recommended length of visit: 4–5 hours</string>
    <string name="zoo_fee">Fee: Yes</string>

    <!-- Yu Garden -->
    <string name="yu_garden_title">Yu Garden</string>
    <string name="yu_garden_subtitle"># History Landmark</string>
    <string name="yu_garden_review">My wife who is an avid gardener was blow away by the size and variety within the walls.
	There is a 60 RMB ticket price to get it but it is well worth the price. Our visit was on a July afternoon so it was very hot
	and humid. Plan ahead as 4 hours is a minimum to enjoy the entire gardens and taking time to stop for pictures and read the
	history. There are shops within the walls selling cheap to very expensive souvenirs but the quality is much better than those
	at the exit.</string>
    <string name="yu_garden_reviewer">—-  E1030RSfrankb</string>
    <string name="yu_garden_address">No.218 Anren Street, Huangpu District \n near Fuyou Road, Shanghai 200010, China</string>
    <string name="yu_garden_desc">A classical garden complete with period style buildings. The Garden was created by
	Pan Yunduan a Government Officer for his family finishing in 1577. </string>
    <string name="yu_garden_length">Recommended length of visit: 2–3 hours</string>
    <string name="yu_garden_fee">Fee: Yes</string>

    <!-- China Railway High-speed  -->
    <string name="train_title">China Railway High-Speed</string>
    <string name="train_subtitle"># Mass Transportation System</string>
    <string name="train_review">Convenient way to get around the cities near Shanghai or the whole country.
	—- HorseHorseTigerTiger</string>
    <string name="train_reviewer">—- HorseHorseTigerTiger</string>
    <string
        name="train_address">Shanghai Hongqiao International Airport, \nMinhang Qu, China</string>
    <string name="train_desc">Works like a train, just faster and cleaner. It connects the Whole China. </string>
    <string name="train_length">Recommended length of visit: 1 hour</string>
    <string name="train_fee">Fee: Yes</string>

    <string name="attraction_image">Attraction Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_direction">Get Direction</string>
    <string name="attractions">Attractions</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu">Menu</string>

    <!-- Restaurants -->
    <string name="restaurant_0_name">Jia Jia Tang Bao</string>
    <string name="restaurant_0_address">Huanghe Rd, People\'s Square Station</string>
    <string name="restaurant_1_name">Mr &amp; Mrs Bund-Modern Eatery</string>
    <string name="restaurant_2_name">Lost Haven</string>
    <string name="restaurant_2_address">38 Gaoyou Rd</string>
    <string name="hotel_0_name">JW Marriott at Tomorrow Square</string>
    <string name="hotel_0_address">No.399 W Nanjing Rd, Huangpu Dist.</string>
    <string name="hotel_1_address">28 Jilong Rd,\\nPilot Free Trade Zone</string>
    <string name="hotel_1_name">Sheraton Shanghai Waigaoqiao</string>
    <string name="hotel_2_name">Mandarin Oriental Pudong</string>
    <string name="hotel_2_address">111 S Pudong Rd, Pudong</string>
    <string name="hotel_3_name">Jingyue 99 Inn Jiangzhen</string>
    <string name="hotel_3_address">No.835 Chuannanfeng Rd, Pudong New Dist</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>

</resources>
