<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/bund_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="12dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_like_white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            tools:text="@string/bund_title"/>

        <TextView
            android:id="@+id/info_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/ColorText"
            android:textSize="16sp"
            tools:text="@string/bund_subtitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/description"
                android:textColor="@color/ColorText"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/ColorText"
                android:textStyle="italic"
                tools:text="@string/bund_description"/>

            <TextView
                android:id="@+id/info_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textStyle="italic"
                tools:text="@string/bund_length"/>

            <TextView
                android:id="@+id/info_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textStyle="italic"
                tools:text="@string/bund_fee"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorButtonDark"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/get_direction"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/ColorText"
            tools:text="@string/bund_address"/>

    </LinearLayout>

</LinearLayout>