<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.exploreshanghai.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main"/>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:maxWidth="300dp"
            android:minWidth="200dp"
            android:maxHeight="200dp"
            android:id="@+id/main_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/heading_shanghai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/shanghai"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="45sp"/>

            <TextView
                android:id="@+id/heading_shanghai_ch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/shanghai_chinese"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="34sp"/>

            <TextView
                android:id="@+id/heading_find_attractions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/find_attractions"/>

            <Button
                android:id="@+id/explore_button"
                style="@style/button_text"
                android:layout_marginBottom="12dp"
                android:text="@string/explore"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>