<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/review_map"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/bund_map"/>

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/review_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    tools:text="@string/bund_title"/>

                <TextView
                    android:id="@+id/review_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/review_title"
                    android:gravity="center_vertical"
                    android:textColor="@color/ColorText"
                    android:textSize="16sp"
                    tools:text="@string/bund_subtitle"/>

                <ImageView
                    android:id="@+id/review_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitEnd"
                    tools:src="@drawable/ic_heart_5"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/review_image_3_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    tools:src="@drawable/bund_3_1"/>

                <ImageView
                    android:id="@+id/review_image_3_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    tools:src="@drawable/bund_3_2"/>

                <ImageView
                    android:id="@+id/review_image_3_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    tools:src="@drawable/bund_3_3"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/review_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ColorText"
                    tools:text="@string/bund_review"/>

                <TextView
                    android:id="@+id/review_reviewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/review_review"
                    android:gravity="right"
                    android:textColor="@color/ColorText"
                    tools:text="@string/bund_reviewer"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>